Adicionando operações de edição(update) e deleção para Movimentação de Materiais.
